# dataclass_dict

./: .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  SECURITY.md  requirements-docs.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
dataclass_dict.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: conf.py  index.rst
docs/_templates/: layout.html
docs/source/: changelogs.rst  conf.py  index.rst
docs/source/_templates/: layout.html
docs/source/api/: core_data.rst  custom_exceptions.rst  data_type.rst  storage.rst  utils.rst
docs/source/tutorial/: getting_started.rst  unity.rst
examples/raws/: first_example.json
notebooks/: basic_usage.ipynb
src/dataclass_dict/: __init__.py  __version__.py  threaded_request.py  utils.py
tests/: test_general.py
tests/raws/: simple_data.json
