[metadata]
name = dataclass-dict
author = Leandro (Cerberus1746) Benedet Garcia
author_email = cerberus1746@gmail.com
version = attr: dataclass_dict.__version__.__version__
license = MIT
license_file = LICENSE
url = https://github.com/Cerberus1746/generic_lexer/
description=
    "With this package you are able to create a dataclass that works exactly like a  dictionary."
home-page = https://cerberus1746.github.io/generic_lexer/
python_requires = >= 3.6
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Repository = https://github.com/Cerberus1746/generic_lexer
    Bug Tracker = https://github.com/Cerberus1746/generic_lexer/issues
    Documentation = https://cerberus1746.github.io/generic_lexer/

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Topic :: Internet

[options]
zip_safe = True
packages = dataclass_dict
package_dir=
    =src

[bdist_wheel]
universal = True
